--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Weather/Index.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Weather/Index.cshtml
@@ -20,6 +20,18 @@
          margin: 0 0 10px 0;
          border: 0 solid gray;
      }
+    .weather-widget-header {
+        display: table;
+        width: 100%;
+    }
+    .weather-widget-title {
+        display: inline;
+        float: left;
+        font-weight: bold;
+    }
+    a.widget-action {
+        float: right;
+    }
     .wd-content {
         height: 150px;    
     }
@@ -96,7 +108,16 @@
     var city = Model.WidgetUserSettings[i].City;
 
     <div id="weather-widget-@i" class="weather-widget">
-        <div class="form-horizontal selection-div">
+
+        <div class="weather-widget-header">
+            <div class="weather-widget-title">
+                @city, @country.ToUpper()
+            </div>
+            <a href="#" onclick="return SettingsToggle(@i)" class="widget-action"><img src="~/Images/Commands/settings.png"/></a>
+        </div>
+        <div class="form-horizontal selection-div hide">
+
+            <a href="#" onclick="return SettingsToggle(@i)" class="widget-action"><img src="~/Images/Commands/close.png"/></a>
 
             <div class="control-group">
                 <label class="control-label">@Localize.Country</label>
@@ -163,7 +184,30 @@
         FormPrepareAjax();
     }
 
+    function SettingsToggle(index) {
+        var widgetId = "#weather-widget-" + index;
+
+        var header = $(widgetId + " .weather-widget-header");
+        var settingsForm = $(widgetId + " .selection-div");
+
+        var isSettingsOpen = $(widgetId).data("IsSettingsOpen");
+        isSettingsOpen = !isSettingsOpen;
+        $(widgetId).data("IsSettingsOpen", isSettingsOpen);
+
+        if (isSettingsOpen) {
+            header.hide();
+            settingsForm.slideDown(200);
+        } else {
+            settingsForm.slideUp(200, function() {
+                header.show();
+            });
+        }
+
+        return false;
+    }
+
     function InitControls() {
+
         $.each($(".weather-widget .lb-country"), function (index, lbCountry) {
             InitCountryDropdown($(lbCountry), index);
         });
@@ -173,9 +217,12 @@
     }
 
     function InitCountryDropdown(lbCountry, index) {
+
+        var widgetId = "#weather-widget-" + index;
+        $(widgetId).data("IsSettingsOpen", false);
+
         lbCountry.change(function() {
 
-            var widgetId = "#weather-widget-" + index;
             $(widgetId + " .wd-content").addClass("busy");
 
             var tbCity = $(widgetId + " .tb-city");
@@ -216,7 +263,11 @@
                 $(widgetId + " .wd-content").addClass("busy");
 
             if (e.keyCode === 13 && tbCity.val().length >= autoCompleteMinLength) {
+                SettingsToggle(index);
                 PrepareWeatherWidget(tbCity.val(), index);
+
+                var tbCountryDropdown = $(widgetId + " .lb-country");
+                $(widgetId + " .weather-widget-title").html(tbCity.val() + ", " + tbCountryDropdown.val().toUpperCase());
             }
 
             if (tbCity.val().length < autoCompleteMinLength && tbCity.data('ui-autocomplete') != undefined) {
