Überführung: Protokoll-Uploadfunktionalität

--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -932,4 +932,8 @@ li.dashboard-dropdown-menu i {
     width: 80%;
 }
 
+.t-grid .t-upload-button {
+    border-radius: 4px !important;
+}
+
 </style>
