--- a/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Forms/Fahrzeug.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Forms/Fahrzeug.cshtml
@@ -61,7 +61,8 @@
         @Html.FormCheckBoxFor(m => m.FahrzeugZugelassen, new { @class = "m-wrap", col = "left" }, labelHidden: true, postControlHtml: @<text><label class="checker">@Localize.VehicleRegisteredAndReady</label></text>)
         @Html.FormCheckBoxFor(m => m.ZulassungBeauftragt, new { @class = "m-wrap", col = "right" }, labelHidden: true, postControlHtml: @<text><label class="checker">@Localize.VehiclesLicenseOrdered</label></text>)
 
-        @Html.FormTextBoxFor(m => m.Referenznummer, new { @class = "m-wrap medium" })
+        @Html.FormTextBoxFor(m => m.Referenznummer, new { @class = "m-wrap medium", col = "left" })
+        @Html.FormDropDownListFor(m => m.Bereifung, Model.BereifungOptions.ToSelectList(), new { @class = "m-wrap medium", col = "right" })
 
                 
         @Html.FormRequiredFieldsSummary()
