--- a/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Partial/Common.cshtml
@@ -34,6 +34,10 @@
         cursor: pointer;
     }
     
+    .protokollartCell {
+        min-width: 150px;
+    }
+    
 </style>
 
 <script type="text/javascript">
