row span dependent css style adaptations

--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
@@ -22,23 +22,23 @@
 /* <single, double + triple height> */
 
 .sDashboard li {
-	margin: 3px 3px 3px 0;
+	margin: 0 5px 3px 0;
 	padding: 1px;
 	float: left;
-	height: 223px !important;
+	height: 220px !important;
 	width: 400px !important;
 }
 .sDashboardWidgetContent {
-	margin: 0.3em;
+	margin: 0;
 	padding: 0.4em;
     padding-top: 20px;
-	height: 160px;
+	height: 158px;
 	overflow-x: hidden;
 	overflow-y: hidden;
 }
 
 .sDashboard li.height2 {
-	height: 446px !important;
+	height: 445px !important;
 }
 .sDashboardWidgetContent.height2 {
 	height: 383px !important;
@@ -47,10 +47,10 @@
     height: 350px !important;
 }
 .sDashboard li.height3 {
-	height: 669px !important;
+	height: 666px !important;
 }
 .sDashboardWidgetContent.height3 {
-	height: 614px !important;
+	height: 608px !important;
 }
 .sDashboardWidgetContentBusyHint.height3 {
     height: 560px !important;
