--- a/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Partial/ProtokollUpload.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Uebfuehrg/Partial/ProtokollUpload.cshtml
@@ -4,24 +4,23 @@
     @for (var i = 0; i < Model.Count; i++)
     {
         var item = Model[i];
-        var labelProtokollartId = "ProtokollArt_" + item.Protokollart;
-        var labelDateinameId = "Dateiname_" + item.Protokollart;
-        var spanId = "spanUpload_" + item.Protokollart;
-        var buttonId = "btnRemoveProtokoll_" + item.Protokollart;
+        var itemIdSuffix = "_" + item.FahrtIndex + "_" + item.ProtokollartFormatted;
+        var labelProtokollartId = "ProtokollArt" + itemIdSuffix;
+        var labelDateinameId = "Dateiname" + itemIdSuffix;
+        var spanId = "spanUpload" + itemIdSuffix;
+        var buttonId = "btnRemoveProtokoll" + itemIdSuffix; ;
 
         <tr>
             <td class="protokollartCell">
                 <label id="@labelProtokollartId">@item.Protokollart</label>
-                @*@Html.FormTextBlockFor(m => m[i].Protokollart, new {@class = "m-wrap medium", id = "ProtokollArt_" + item.Protokollart})*@
             </td>
             <td>
                 <label id="@labelDateinameId">@item.Dateiname</label>
-                @*@Html.FormTextBlockFor(m => m[i].Dateiname, new { @class = "m-wrap", id = "Dateiname_" + item.Protokollart })*@
             </td>
             <td>
                 <span id="@spanId" class='@(item.Dateiname.IsNullOrEmpty() ? "" : "hide")'>
                     @(Html.Telerik().Upload()
-                          .Name("fileUpload_" + @item.Protokollart)
+                          .Name("fileUpload" + itemIdSuffix)
                           .Localizable("de-DE")
                           .Async(async => async
                               .Save("UploadProtokollStart", "Uebfuehrg", new { protokollArt = @item.Protokollart })
@@ -38,7 +37,7 @@
                       )
                 </span>
 
-                <button type="button" id="@buttonId" onclick="RemoveProtokoll('@item.Protokollart');" class='@("btn mini gray tooltips margin-left-10 " + (item.Dateiname.IsNullOrEmpty() ? "hide" : ""))' data-original-title="@Localize.Delete" data-placement="right"><i class="halflings-icon white remove"></i></button>
+                <button type="button" id="@buttonId" onclick="RemoveProtokoll('@item.Protokollart', '@item.FahrtIndex');" class='@("btn mini gray tooltips margin-left-10 " + (item.Dateiname.IsNullOrEmpty() ? "hide" : ""))' data-original-title="@Localize.Delete" data-placement="right"><i class="halflings-icon white remove"></i></button>
             </td>
         </tr>
     }
