--- a/Work/Tools/MvcTools/Views/Shared/JQueryHelper.cshtml
+++ b/Work/Tools/MvcTools/Views/Shared/JQueryHelper.cshtml
@@ -203,7 +203,7 @@
                 break;
             case "606":
                 // Zulassungsbesch. Teil 1
-                expr = /^[A-ZÄÖÜ]{1,3}-\d{1,18}$/;
+                expr = /^[A-ZÄÖÜ]{1,3}-[A-Z]{0,2}\d{1,18}$/;
                 if (!expr.test(strKennz)) {
                     return false;
                 }
